<resources>
    <string name="app_name">Agua</string>
    <string name="txt_welcome">Bienvenido</string>
    <string name="btn_login">LOGIN</string>
    <string name="txt_forgot_password"><u>FORGOT YOUR PASSWORD?</u></string>
    <string name="txt_not_account">NOT AN ACCOUNT?</string>
    <string name="txt_create_account"><u>CREATE ACCOUNT</u></string>
    <string name="txt_sign_up">Registro</string>
    <string name="txtv_email">CORREO ELECTRÓNICO</string>
    <string name="txtv_password">CONTRASEÑA</string>
    <string name="btn_send_email">ENVIAR</string>
    <string name="txtv_type_code">ESCRIBE TU CÓDIGO</string>
    <string name="txtv_resend_email"><u>REENVIAR CORREO</u></string>
    <string name="btn_insertcode">INSERTAR</string>
    <string name="btn_exit">SALIR</string>
    <string name="btn_register">REGISTRAR</string>
    <string name="txtv_nombre">NOMBRE</string>
    <string name="txtv_apPat">APELLIDO PATERNO</string>
    <string name="txtv_apMat">APELLIDO MATERNO</string>
    <string name="txtv_tel">TELEFONO</string>
    <string name="txtv_hello">HOLA</string>
    <string name="txtv_aviso_priv">Tus datos serán tratados con condifencialidad y sin fines de lucro.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_home_nav_draw">HomeNavDrawActivity</string>
    <string name="txtv_aviso_bien">Estamos muy felices porque ahora eres parte de esta gran misión.</string>
    <string name="btn_next">SIGUIENTE</string>
    <string name="btn_next_pi">ENTENDIDO</string>
    <string name="txtv_aviso_emp">Es momento de crear tu perfil y completarlo.</string>
    <string name="txtv_aviso_casiemp">Casi empezamos</string>

</resources>