<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/name4"
        android:layout_width="169dp"
        android:layout_height="187dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:background="@drawable/gota_welcome"
        android:foregroundGravity="center_vertical"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/txtv_welcome"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:gravity="center"
        android:text="@string/txt_welcome"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/txtbox_email"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="276dp"
        android:background="@drawable/cuadrado_corners"
        android:clickable="true"
        android:elevation="20dp"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_isend_email"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:foregroundGravity="center_vertical"
            app:srcCompat="@drawable/ic_baseline_person_24"
            android:scaleType="centerCrop" />


        <EditText
            android:id="@+id/edtTextEmailAddress"
            android:layout_width="190dp"
            android:layout_height="44dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:hint="@string/txtv_email"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="109dp"
            tools:layout_editor_absoluteY="662dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/txtbox_password"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/cuadrado_corners"
        android:clickable="true"
        android:elevation="20dp"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbox_email">

        <ImageView
            android:id="@+id/img_icon_password"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:foregroundGravity="center_vertical"
            app:srcCompat="@drawable/ic_baseline_https_24"
            android:scaleType="centerCrop" />

        <EditText
            android:id="@+id/edtTextPassword"
            android:layout_width="190dp"
            android:layout_height="44dp"
            android:ems="10"
            android:hint="@string/txtv_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="5dp"
            tools:layout_editor_absoluteX="127dp"
            tools:layout_editor_absoluteY="38dp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:elevation="20dp"
        android:onClick="IrHome"
        android:text="@string/btn_login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtbox_password" />

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="190dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:elevation="20dp"
        android:text="@string/txt_forgot_password"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="#FFA726"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />

    <RelativeLayout
        android:id="@+id/txtbox_password1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="40dp"
        android:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password"
        app:layout_constraintVertical_bias="0.271">

        <TextView
            android:id="@+id/txt_not_account1"
            android:layout_width="140dp"
            android:layout_height="25dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="5dp"
            android:elevation="20dp"
            android:text="@string/txt_not_account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="127dp"
            tools:layout_editor_absoluteY="38dp" />

        <TextView
            android:id="@+id/txt_create_account1"
            android:layout_width="140dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/txt_not_account1"
            android:elevation="20dp"
            android:onClick="Siguiente"
            android:text="@string/txt_create_account"
            android:textAlignment="center"
            android:textColor="#0D47A1"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="127dp"
            tools:layout_editor_absoluteY="38dp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>