<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/txv_signUp"
        android:layout_width="210dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/txt_sign_up"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_isend_email"
            android:layout_width="144dp"
            android:layout_height="176dp"
            android:layout_marginTop="104dp"
            android:background="@drawable/gota_email"
            android:foregroundGravity="center_vertical"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/txtb_email"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:background="@drawable/cuadrado_corners"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:elevation="20dp"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_isend_email">

            <ImageView
                android:id="@+id/img_iperson"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:foregroundGravity="center_vertical"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ic_baseline_person_24" />


            <EditText
                android:id="@+id/edtTextEmailAddress"
                android:layout_width="190dp"
                android:layout_height="44dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="5dp"
                android:ems="10"
                android:hint="@string/txtv_email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="109dp"
                tools:layout_editor_absoluteY="662dp" />

        </RelativeLayout>

    <Button
        android:id="@+id/btn_send_email"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:elevation="20dp"
        android:text="@string/btn_send_email"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtb_email" />

        <RelativeLayout
            android:id="@+id/txtb_typecode"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/cuadrado_corners"
            android:clickable="true"
            android:elevation="20dp"
            android:focusable="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtb_email">

            <EditText
                android:id="@+id/edtTNumberSigned"
                android:layout_width="240dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:ems="10"
                android:hint="@string/txtv_type_code"
                android:inputType="numberSigned"
                android:textAlignment="center"
                android:textSize="18sp" />
        </RelativeLayout>

        <Chronometer
            android:id="@+id/cronometro"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtb_typecode" />

        <Button
            android:id="@+id/btn_insert_code"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:elevation="20dp"
            android:onClick="Siguiente"
            android:text="@string/btn_insertcode"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtb_email" />


        <TextView
            android:id="@+id/txtv_resend_email"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="192dp"
            android:text="@string/txtv_resend_email"
            android:textSize="20dp"
            android:textColor="#FFA726"
            android:visibility="invisible"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtb_typecode" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>